cleanup and debug after jax/code updates

--- a/notebooks/Synthetic lightcurves 1 - Recovery idealized.ipynb
+++ b/notebooks/Synthetic lightcurves 1 - Recovery idealized.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "b85f8e98-8ea4-4e4c-9304-038107b539e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to eht-imaging! v 1.2.5 \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Tensorflow library not found, tensorflow.io.gfile operations will use native shim calls. GCS paths (i.e. 'gs://...') cannot be accessed.\n"
+     ]
+    }
+   ],
    "source": [
     "import bhnerf\n",
     "from astropy import units\n",
@@ -16,14 +32,13 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import ruamel.yaml as yaml\n",
+    "import warnings\n",
+    "from bhnerf.optimization import LogFn\n",
+    "warnings.simplefilter(\"ignore\")\n",
     "\n",
     "# Runing on 2 GPUs\n",
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '1,3'\n",
-    "\n",
-    "import warnings\n",
-    "from bhnerf.optimization import LogFn\n",
-    "warnings.simplefilter(\"ignore\")"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '6,7'"
    ]
   },
   {
@@ -31,13 +46,14 @@
    "id": "00b17e33-f366-45fa-bf28-db20ed49d1be",
    "metadata": {},
    "source": [
-    "# Load synthetic data\n",
-    "---"
+    "Load synthetic data\n",
+    "---\n",
+    "Data was precomputed using: `notebooks/Synthetic lightcurves 0 - Generate data.ipynb`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "91335518-63d5-4212-bfec-2ab73a60ad01",
    "metadata": {},
    "outputs": [
@@ -72,37 +88,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>9.340563</td>\n",
-       "      <td>0.260572</td>\n",
-       "      <td>0.096583</td>\n",
-       "      <td>0.122080</td>\n",
+       "      <td>0.265225</td>\n",
+       "      <td>0.047161</td>\n",
+       "      <td>0.161291</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>9.350670</td>\n",
-       "      <td>0.255594</td>\n",
-       "      <td>0.102229</td>\n",
-       "      <td>0.110132</td>\n",
+       "      <td>0.261085</td>\n",
+       "      <td>0.058046</td>\n",
+       "      <td>0.153017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>9.360777</td>\n",
-       "      <td>0.250520</td>\n",
-       "      <td>0.106546</td>\n",
-       "      <td>0.097898</td>\n",
+       "      <td>0.256678</td>\n",
+       "      <td>0.068029</td>\n",
+       "      <td>0.143825</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>9.370883</td>\n",
-       "      <td>0.245289</td>\n",
-       "      <td>0.109462</td>\n",
-       "      <td>0.085561</td>\n",
+       "      <td>0.252142</td>\n",
+       "      <td>0.076992</td>\n",
+       "      <td>0.133942</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>9.380990</td>\n",
-       "      <td>0.240443</td>\n",
-       "      <td>0.110972</td>\n",
-       "      <td>0.072903</td>\n",
+       "      <td>0.247599</td>\n",
+       "      <td>0.084752</td>\n",
+       "      <td>0.123580</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -110,14 +126,14 @@
       ],
       "text/plain": [
        "          t         I         Q         U\n",
-       "0  9.340563  0.260572  0.096583  0.122080\n",
-       "1  9.350670  0.255594  0.102229  0.110132\n",
-       "2  9.360777  0.250520  0.106546  0.097898\n",
-       "3  9.370883  0.245289  0.109462  0.085561\n",
-       "4  9.380990  0.240443  0.110972  0.072903"
+       "0  9.340563  0.265225  0.047161  0.161291\n",
+       "1  9.350670  0.261085  0.058046  0.153017\n",
+       "2  9.360777  0.256678  0.068029  0.143825\n",
+       "3  9.370883  0.252142  0.076992  0.133942\n",
+       "4  9.380990  0.247599  0.084752  0.123580"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,12 +159,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "f6466bd6-6272-432e-be7e-9b5454ea46ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(data_path.parent.joinpath('sim1_params.yml'), 'r') as stream:\n",
+    "with open(data_path.parent.joinpath('sim1_params.yaml'), 'r') as stream:\n",
     "    simulation_params = yaml.load(stream, Loader=yaml.Loader)\n",
     "locals().update(simulation_params['model'])\n",
     "\n",
@@ -166,12 +182,12 @@
     "    'hparams': {'num_iters': 50000, 'lr_init': 1e-4, 'lr_final': 1e-6, 'seed': 1}\n",
     "}\n",
     "\n",
-    "locals().update(recovery_params)"
+    "params = simulation_params['model'] | recovery_params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "886b7356-8a0d-4147-9130-4577d5d79b13",
    "metadata": {},
    "outputs": [],
@@ -179,46 +195,27 @@
     "# Load ground truth flare for comparison\n",
     "sim_name = simulation_params['name']\n",
     "flare_path = Path(simulation_params['flare_path'])\n",
-    "emission_flare = xr.load_dataarray(flare_path)\n",
+    "emission_flare = emission_scale * xr.load_dataarray(flare_path)\n",
     "\n",
-    "# Compute geodesics\n",
-    "geos = bhnerf.kgeo.image_plane_geos(\n",
-    "    spin, np.deg2rad(inclination), \n",
-    "    num_alpha=num_alpha, num_beta=num_beta, \n",
-    "    alpha_range=[-fov_M/2, fov_M/2],\n",
-    "    beta_range=[-fov_M/2, fov_M/2])\n",
+    "# Ray tracing parameters\n",
+    "geos, Omega, J = bhnerf.alma.image_plane_model(np.deg2rad(inclination), spin, params)\n",
     "t_injection = -float(geos.r_o + fov_M/4)\n",
-    "\n",
-    "# Keplerian velocity field\n",
-    "rot_sign = {'cw': -1, 'ccw': 1}\n",
-    "Omega = rot_sign[Omega_dir] * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
-    "umu = bhnerf.kgeo.azimuthal_velocity_vector(geos, Omega)\n",
-    "g = bhnerf.kgeo.doppler_factor(geos, umu)\n",
-    "\n",
-    "# Magnitude normalized magnetic field in fluid-frame\n",
-    "b = bhnerf.kgeo.magnetic_field_fluid_frame(geos, umu, **b_consts)\n",
-    "domain = np.bitwise_and(np.bitwise_and(np.abs(geos.z) < z_width, geos.r > rmin), geos.r < rmax)\n",
-    "b_mean = np.sqrt(np.sum(b[domain]**2, axis=-1)).mean()\n",
-    "b /= b_mean\n",
-    "\n",
-    "# Polarized emission factors (including parallel transport)\n",
-    "J = np.nan_to_num(bhnerf.kgeo.parallel_transport(geos, umu, g, b, Q_frac=Q_frac, V_frac=0), 0.0)\n",
     "\n",
     "# Network / Optimization parameters\n",
     "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_start_obs*units.hr, J)\n",
-    "predictor = bhnerf.network.NeRF_Predictor(rmax, rmin, rmax, z_width, posenc_var=recovery_scale/fov_M)"
+    "predictor = bhnerf.network.NeRF_Predictor(rmax, rmin, rmax, z_width)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "0925ff86-abf0-49fa-b71d-9ef3be495fa2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "911751d13c414a36ae818220068d4fbe",
+       "model_id": "8f1b6302f5124909be290af82bfd35f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -233,7 +230,7 @@
    "source": [
     "%matplotlib inline\n",
     "log_period = 500\n",
-    "recovery_dir = data_path.parent.joinpath('recovery/{}.seed_{}.no_systematics.{}'.format(sim_name, hparams['seed'], ''.join(stokes)))\n",
+    "recovery_dir = data_path.parent.joinpath('recovery/{}_seed{}_stokes_{}_idealized'.format(sim_name, hparams['seed'], ''.join(stokes)))\n",
     "t_frames, target = np.array(lightcurves_df['t']), np.array(lightcurves_df[stokes])\n",
     "train_step = bhnerf.optimization.TrainStep.image(t_frames, target, sigma, dtype='lc')\n",
     "\n",
@@ -242,7 +239,7 @@
     "log_fns = [\n",
     "    LogFn(lambda opt: writer.add_scalar('log_loss/train', np.log10(np.mean(opt.loss)), global_step=opt.step)), \n",
     "    LogFn(lambda opt: writer.recovery_3d(fov_M, emission_true=emission_flare)(opt), log_period=log_period),\n",
-    "    LogFn(lambda opt: writer.plot_lc_datafit(opt, target, stokes, t_frames, batchsize=20), log_period=log_period)\n",
+    "    LogFn(lambda opt: writer.plot_lc_datafit(opt, 'training', train_step, target, stokes, t_frames, batchsize=20), log_period=log_period)\n",
     "]\n",
     "\n",
     "# Optimization\n",
@@ -250,17 +247,47 @@
     "optimizer.run(batchsize, train_step, raytracing_args, log_fns=log_fns)\n",
     "writer.close()\n",
     "\n",
-    "params = {'simulation': simulation_params, 'recovery': recovery_params}\n",
-    "with open('{}/params.yml'.format(recovery_dir), 'w') as file:\n",
-    "    yaml.dump(params, file, default_flow_style=False)"
+    "out_params = {'simulation': simulation_params, 'recovery': recovery_params}\n",
+    "with open('{}/params.yaml'.format(recovery_dir), 'w') as file:\n",
+    "    yaml.dump(out_params, file, default_flow_style=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7a1032eb-7f41-4890-b571-4a4021e5c489",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1925861692ab48d5905d090acae53329",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Container(figure=Figure(box_center=[0.5, 0.5, 0.5], box_size=[1.0, 1.0, 1.0], camera=PerspectiveCamera(fov=45.…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Visualize the recovered 3D emission\n",
+    "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
+    "\"\"\"\n",
+    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.params, fov=fov_M)\n",
+    "bhnerf.visualization.ipyvolume_3d(emission_estimate, fov=fov_M, level=[0, 0.2, 0.7])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jax",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "jax"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -272,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
