--- a/notebooks/ALMA lightcurves 1 - Recovery analysis.ipynb
+++ b/notebooks/ALMA lightcurves 1 - Recovery analysis.ipynb
@@ -113,6 +113,7 @@
     "locals().update(config['preprocess'])\n",
     "locals().update(config['model'])\n",
     "train_split = config['optimization']['train_split']\n",
+    "sigma = config['optimization']['sigma']\n",
     "\n",
     "# Preprocess / split data to train/validation\n",
     "target, t_frames = bhnerf.alma.preprocess_data(**config['preprocess'])\n",
