--- a/tutorials/Tutorial6 - Estimate uncertainty via bayesrays.ipynb
+++ b/tutorials/Tutorial6 - Estimate uncertainty via bayesrays.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3972b88e",
    "metadata": {},
    "outputs": [],
@@ -439,27 +439,22 @@
     "\n",
     "var0 = br_unc.upsample(V, resolution=R)\n",
     "sigma_ts = br_unc.propagate_positional_variance(sigma0_var=var0, t_frames=t_frames, fov_M=fov_M, \n",
-    "R=64, spin=spin, M=1.0, rot_axis=(0.,0.,1.), chunk_pts=32768) #propagate forward in time according to the dynamics in emission.py"
+    "R=64, spin=spin, M=1.0, rot_axis=(0.,0.,1.), chunk_pts=32768) # propagate forward in time according to the dynamics in emission.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d7151e02",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"render time dependent uncertainty\"\"\"\n",
-    "importlib.reload(bhnerf.uncertainty)\n",
-    "\n",
-    "network_movie = br_unc.build_emission_movie(t_frames=t_frames, fov_M=fov_M, R=R, spin=spin) # for dynamic masking\n",
-    "masks = bhnerf.uncertainty.build_dynamic_mask(network_movie, relative_threshold=0.01) # 0 out where no emission\n",
-    "sigma_ts_render = bhnerf.uncertainty.prepare_unc_for_render(sigma_ts, mask=masks) #mask, clip, log scale"
+    "\"\"\"prepare to render time dependent uncertainty\"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "658fdcfb",
    "metadata": {},
    "outputs": [
@@ -520,9 +515,13 @@
     }
    ],
    "source": [
-    "print(sigma_ts.shape)\n",
-    "print(sigma_ts_render.shape)\n",
-    "importlib.reload(bhnerf.visualization)\n",
+    "\"\"\"render time dependent uncertainty\"\"\"\n",
+    "# for dynamic masking\n",
+    "network_movie = br_unc.build_emission_movie(t_frames=t_frames, fov_M=fov_M, R=R, spin=spin) \n",
+    "# 0 out where there is no emission\n",
+    "masks = bhnerf.uncertainty.build_dynamic_mask(network_movie, relative_threshold=0.01) \n",
+    "# mask, clip, log scale\n",
+    "sigma_ts_render = bhnerf.uncertainty.prepare_unc_for_render(sigma_ts, mask=masks) \n",
     "\n",
     "visualizer = bhnerf.visualization.VolumeVisualizer(R, R, R)\n",
     "%matplotlib widget\n",
@@ -531,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "e275c477",
    "metadata": {},
    "outputs": [],
