decrease notebook size

--- a/tutorials/Tutorial7 - Estimate uncertainty via naive ensemble.ipynb.ipynb
+++ b/tutorials/Tutorial7 - Estimate uncertainty via naive ensemble.ipynb.ipynb
@@ -227,7 +227,7 @@
     "#bhnerf.visualization.show_uncert_volume(std_norm, fov_M, cmap_name=\"inferno\", level_norm=[.0,.4,.8,1.0], opacity =[0,.1,.5,.9])\n",
     "\n",
     "%matplotlib widget\n",
-    "fig = bhnerf.visualization.render_volumes_plotly((std_norm, mean_norm), fov_M, ('Standard deviation emission (frame 0)', 'Mean emission (frame 0)'), percentiles=(5, 99.5), surface_count=6)\n",
+    "fig = bhnerf.visualization.render_volumes_plotly((std_norm, mean_norm), fov_M, titles=('Standard deviation emission (frame 0)', 'Mean emission (frame 0)'), percentiles=[(80, 99.5), (80, 99.5)], surface_count=6)\n",
     "fig.show()"
    ]
   },
@@ -440,32 +440,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "0c411bf7",
+   "execution_count": null,
+   "id": "16",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Notebook size on disk: 0.0 MB\n",
-      "Root metadata keys: ['kernelspec', 'language_info']\n",
-      "\n",
-      "Heaviest cells:\n",
-      "  Cell  16 | code     |   0.01 MB | outputs=1 | attachments=0\n",
-      "      output mimes: []\n",
-      "  Cell   2 | code     |   0.00 MB | outputs=0 | attachments=0\n",
-      "  Cell   1 | code     |   0.00 MB | outputs=0 | attachments=0\n",
-      "  Cell   8 | code     |   0.00 MB | outputs=0 | attachments=0\n",
-      "  Cell   7 | code     |   0.00 MB | outputs=0 | attachments=0\n",
-      "  Cell   3 | code     |   0.00 MB | outputs=0 | attachments=0\n",
-      "  Cell  11 | code     |   0.00 MB | outputs=0 | attachments=0\n",
-      "  Cell   5 | code     |   0.00 MB | outputs=0 | attachments=0\n",
-      "  Cell  12 | code     |   0.00 MB | outputs=0 | attachments=0\n",
-      "  Cell   6 | code     |   0.00 MB | outputs=0 | attachments=0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json, os\n",
     "from pathlib import Path\n",
