add quiver and geodesics visualization in plotly

--- a/tutorials/bayes_rays_3obs.ipynb
+++ b/tutorials/bayes_rays_3obs.ipynb
@@ -39,8 +39,7 @@
     "    data = bhnerf.emission.interpolate_coords(da, coords)  \n",
     "    return xr.DataArray(data, coords=da.coords, dims=da.dims, attrs=da.attrs)\n",
     "\n",
-    "def multi_hotspot_emission_xr(spin, fov_M, resolution=(64,64,64), orbit_radius=5.5, blobs=(), flux_scale=0.1\n",
-    "):\n",
+    "def multi_hotspot_emission_xr(spin, fov_M, resolution=(64,64,64), orbit_radius=5.5, blobs=(), flux_scale=0.1):\n",
     "    \"\"\"\n",
     "    blobs: list of dicts with keys:\n",
     "      ang_deg (required), amp (default 1.0), std (scalar or (sx,sy,sz), default 0.7), dz (default 0.0)\n",
@@ -217,7 +216,7 @@
     "import bhnerf.uncertainty as unc\n",
     "\n",
     "times, sigma, A = unc.build_A_per_frame(obs, t_frames, movie.fovx(), movie.xdim)\n",
-    "frames_to_include = [list(range(len(t_frames)))]\n",
+    "frames_to_include = [0]\n",
     "br_unc = unc.BayesRaysUncertaintyMapper(\n",
     "    predictor_apply=predictor.apply, predictor_params=params, raytracing_args=raytracing_args, t_frames=t_frames, \n",
     "    frames_to_include=frames_to_include, A=A, sigma=sigma, fov=fov_M, grid_res=(64, 64, 64), lam=1e-6/64**3\n",
@@ -248,7 +247,7 @@
    "source": [
     "import pickle\n",
     "H = pickle.load(open('../results/bayesrays/hessian_diag_64_fig8_r1.pkl', 'rb'))\n",
-    "V = br_unc.get_covariance(H, False)"
+    "V = br_unc.get_covariance(H, False)\n"
    ]
   },
   {
@@ -260,6 +259,149 @@
    "source": [
     "importlib.reload(bhnerf.visualization)\n",
     "import bhnerf.visualization as vis\n",
+    "\n",
+    "def prepare_quiver_vectors(sx, sy, sz, stride=(2,2,2), mask=None,\n",
+    "                           pct=(5, 99.5), gamma=0.9, eps=1e-12):\n",
+    "    L = np.sqrt(sx*sx + sy*sy + sz*sz) + eps\n",
+    "\n",
+    "    M = np.ones_like(L, dtype=bool)\n",
+    "    if mask is not None:\n",
+    "        M &= np.asarray(mask) > 0\n",
+    "    Ms = M[::stride[0], ::stride[1], ::stride[2]]\n",
+    "    Ls = L[::stride[0], ::stride[1], ::stride[2]][Ms]\n",
+    "\n",
+    "    logLs = np.log1p(Ls)\n",
+    "    lo, hi = np.nanpercentile(logLs, pct)\n",
+    "    if not np.isfinite(lo): lo = np.nanmin(logLs)\n",
+    "    if not np.isfinite(hi) or hi <= lo: hi = lo + 1e-6\n",
+    "\n",
+    "    S = np.clip((np.log1p(L) - lo) / (hi - lo), 0.0, 1.0) ** gamma\n",
+    "\n",
+    "    Ux = (sx / L) * S\n",
+    "    Uy = (sy / L) * S\n",
+    "    Uz = (sz / L) * S\n",
+    "\n",
+    "    Sd = S[::stride[0], ::stride[1], ::stride[2]][Ms]\n",
+    "    print(\"S percentiles on drawn subset:\", np.nanpercentile(Sd, [0,25,50,75,90,99,100]))\n",
+    "    return Ux, Uy, Uz\n",
+    "\n",
+    "nx, ny, nz = br_unc.grid_res\n",
+    "V_grid = V.reshape((nx, ny, nz, 3))\n",
+    "sigma_x, sigma_y, sigma_z = V_grid[..., 0], V_grid[..., 1], V_grid[..., 2]\n",
+    "\n",
+    "grid_1d = np.linspace(-fov_M/2, fov_M/2, nx)\n",
+    "coords = np.array(np.meshgrid(grid_1d, grid_1d, grid_1d, indexing='ij'))\n",
+    "\n",
+    "stride = (max(1,nx//32), max(1,ny//32), max(1,nz//32))\n",
+    "def distance(x, y, z, a, b, c):\n",
+    "    return ((x-a)**2 + (y-b)**2 + (z-c)**2)**0.5\n",
+    "\n",
+    "def los_tube_mask_from_obsdir(x, y, z, geos, pixel=None, radius=None):\n",
+    "    \"\"\"\n",
+    "    Make a boolean mask selecting voxels within 'radius' of the line\n",
+    "    p(t) = p_obs + t * vhat, where (vhat, p_obs) = obs_dir_from_geos(geos, pixel).\n",
+    "\n",
+    "    x,y,z can be 1D axes or 3D meshes; output mask matches the broadcasted grid shape.\n",
+    "    If radius is None, it defaults to ~2 voxels.\n",
+    "    \"\"\"\n",
+    "    # 1) build mesh\n",
+    "    def _mesh(a,b,c):\n",
+    "        A,B,C = map(np.asarray, (a,b,c))\n",
+    "        return np.meshgrid(A,B,C, indexing='ij') if (A.ndim==B.ndim==C.ndim==1) else (A,B,C)\n",
+    "    X, Y, Z = _mesh(x, y, z)\n",
+    "\n",
+    "    vhat, p_obs = vis.obs_dir_from_geos(geos, pixel=pixel)\n",
+    "    vhat = np.asarray(vhat, float); vhat /= (np.linalg.norm(vhat)+1e-12)\n",
+    "    p_obs = np.asarray(p_obs, float)\n",
+    "\n",
+    "    if radius is None:\n",
+    "        def step1(V):\n",
+    "            v1 = V.reshape(V.shape[0], -1)[:, 0]\n",
+    "            return np.nanmedian(np.abs(np.diff(v1))) if v1.size > 1 else np.nan\n",
+    "        dx, dy, dz = step1(X), step1(Y), step1(Z)\n",
+    "        steps = [v for v in (dx,dy,dz) if np.isfinite(v) and v>0]\n",
+    "        h = float(np.nanmedian(steps)) if steps else 1.0\n",
+    "        radius = 2.0 * h\n",
+    "\n",
+    "    xmin,xmax = float(np.nanmin(X)), float(np.nanmax(X))\n",
+    "    ymin,ymax = float(np.nanmin(Y)), float(np.nanmax(Y))\n",
+    "    zmin,zmax = float(np.nanmin(Z)), float(np.nanmax(Z))\n",
+    "    corners = np.array([[xmin,ymin,zmin],[xmin,ymin,zmax],[xmin,ymax,zmin],[xmin,ymax,zmax],\n",
+    "                        [xmax,ymin,zmin],[xmax,ymin,zmax],[xmax,ymax,zmin],[xmax,ymax,zmax]], float)\n",
+    "    t_corners = (corners - p_obs) @ vhat\n",
+    "    tmin, tmax = float(np.min(t_corners)), float(np.max(t_corners))\n",
+    "\n",
+    "    R = np.stack([X.ravel(), Y.ravel(), Z.ravel()], axis=1)\n",
+    "    rp = R - p_obs\n",
+    "    t = rp @ vhat\n",
+    "    t = np.clip(t, tmin, tmax)\n",
+    "    closest = p_obs + t[:,None]*vhat\n",
+    "    d2 = np.sum((R - closest)**2, axis=1)\n",
+    "\n",
+    "    return (d2 <= radius*radius).reshape(X.shape)\n",
+    "\n",
+    "geodesic_mask, P, sel = vis.geodesic_tube_mask(\n",
+    "    coords[0], coords[1], coords[2],\n",
+    "    geos,\n",
+    "    select=\"min_r\",\n",
+    "    stride=(4,4),\n",
+    "    s_stride=1,\n",
+    "    radius=None\n",
+    ")\n",
+    "mask = (emission_estimate > 0) & geodesic_mask\n",
+    "\n",
+    "Ux, Uy, Uz = prepare_quiver_vectors(sigma_x, sigma_y, sigma_z,\n",
+    "                                    stride=stride, mask=mask,\n",
+    "                                    pct=(5, 99.5), gamma=0.8)\n",
+    "fig = vis.render_3d_quiver(\n",
+    "    Ux, Uy, Uz,\n",
+    "    x=coords[0], y=coords[1], z=coords[2],\n",
+    "    stride=stride,\n",
+    "    mask=mask,\n",
+    "    normalize=False,\n",
+    "    scale=0.15,\n",
+    "    opacity=0.15,\n",
+    "    title='Uncertainty quiver plot with geodesics overlay'\n",
+    ")\n",
+    "\n",
+    "g = bhnerf.kgeo.doppler_factor(geos, Omega)\n",
+    "\"\"\"fig = vis.plot_geodesics_plotly(geos, \n",
+    "                                value=g,\n",
+    "                                max_r=2*8.0,\n",
+    "                                stride=(1,1),\n",
+    "                                mode='lines',\n",
+    "                                fig=fig,\n",
+    "                                line_every=16,\n",
+    "                                )\"\"\"\n",
+    "fig = vis.overlay_obs_and_warp_from_geos(fig, geos, coords[0], coords[1], coords[2], spin=spin)\n",
+    "import plotly.graph_objects as go\n",
+    "def aabb_from_coords(x, y, z, pad=0.0):\n",
+    "    import numpy as np\n",
+    "    def mm(A): return float(np.nanmin(A)), float(np.nanmax(A))\n",
+    "    xmin, xmax = mm(x); ymin, ymax = mm(y); zmin, zmax = mm(z)\n",
+    "    return (xmin-pad, xmax+pad, ymin-pad, ymax+pad, zmin-pad, zmax+pad)\n",
+    "\n",
+    "xmin,xmax,ymin,ymax,zmin,zmax = aabb_from_coords(coords[0], coords[1], coords[2])\n",
+    "inside = (P[:,0]>=xmin)&(P[:,0]<=xmax)&(P[:,1]>=ymin)&(P[:,1]<=ymax)&(P[:,2]>=zmin)&(P[:,2]<=zmax)\n",
+    "P = P[inside]\n",
+    "fig.add_trace(go.Scatter3d(\n",
+    "    x=P[:,0], y=P[:,1], z=P[:,2],\n",
+    "    mode=\"lines\",\n",
+    "    line=dict(width=5, color=\"#1f77b4\"),\n",
+    "    name=f\"Selected geodesic ({sel[0]}={sel[1:]})\",\n",
+    "    showlegend=True\n",
+    "))\n",
+    "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "uncertainty = br_unc.prep_uncertainty_3d(H, V, fov_M, min_uncertainty=-3, max_uncertainty=6, resolution=64, squared_weights=False, mask=True)\n",
     "opacityscale = [\n",
@@ -281,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -397,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
