--- a/tutorials/Tutorial1 - Kerr geodesics.ipynb
+++ b/tutorials/Tutorial1 - Kerr geodesics.ipynb
@@ -203,7 +203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "eht",
+   "display_name": "jax",
    "language": "python",
    "name": "python3"
   },
@@ -217,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
