fix notebook size issues

--- a/tutorials/naive_ensemble_uncertainty.ipynb
+++ b/tutorials/naive_ensemble_uncertainty.ipynb
@@ -120,8 +120,6 @@
     "    X, Y, Z = np.meshgrid(side, side, side, indexing='ij')\n",
     "    rho = np.sqrt(X*X + Y*Y) + 1e-9\n",
     "    a = np.float32(spin)\n",
-    "    # Kerr equatorial orbital frequency (M=1 units): Ωφ = 1 / (ρ^{3/2} + a)\n",
-    "    # If you carry M explicitly: Ωφ = sqrt(M) / (ρ^{3/2} + a*sqrt(M))\n",
     "    Ms = np.sqrt(np.float32(M))\n",
     "    return (Ms / (rho**1.5 + a*Ms)).astype(np.float32) * np.sign(a if a != 0 else 1.0)\n",
     "\n",
@@ -224,8 +222,6 @@
     "std_norm = np.clip((std_vol - std_vol.min())/(std_vol.max()-std_vol.min()), 0, 1)\n",
     "mean_norm = np.clip((mean_vol - mean_vol.min()) / (mean_vol.max()-mean_vol.min()), 0, 1)\n",
     "\n",
-    "#bhnerf.visualization.show_uncert_volume(std_norm, fov_M, cmap_name=\"inferno\", level_norm=[.0,.4,.8,1.0], opacity =[0,.1,.5,.9])\n",
-    "\n",
     "%matplotlib widget\n",
     "fig = bhnerf.visualization.render_volumes_plotly((std_norm, mean_norm), fov_M, titles=('Standard deviation emission (frame 0)', 'Mean emission (frame 0)'), percentiles=[(80, 99.5), (80, 99.5)], surface_count=6)\n",
     "fig.show()"
@@ -300,7 +296,7 @@
     "nt = 64\n",
     "resolution = 128\n",
     "\n",
-    "#volumes = np.zeros((n_ens, nt, resolution, resolution, resolution), dtype=np.float32)\n",
+    "volumes = np.zeros((n_ens, nt, resolution, resolution, resolution), dtype=np.float32)\n",
     "for i, seed_dir in enumerate(tqdm(sorted(ROOT.iterdir()), desc='ensemble member')):\n",
     "    run_dir, ckpt_dir = find_run_and_checkpoint(seed_dir)\n",
     "    predictor, params = load_predictor(ckpt_dir, run_dir)\n",
@@ -340,16 +336,6 @@
     "    run_dir, ckpt_dir = find_run_and_checkpoint(seed_dir)\n",
     "    predictor, params = load_predictor(ckpt_dir, run_dir)\n",
     "    emission_0 = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(volumes.shape)"
    ]
   },
   {
