add notebook output cleaning

--- a/tutorials/naive_ensemble_uncertainty.ipynb
+++ b/tutorials/naive_ensemble_uncertainty.ipynb
@@ -463,6 +463,34 @@
     "            if \"data\" in o: mimes |= set(o[\"data\"].keys())\n",
     "        print(\"      output mimes:\", sorted(mimes))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80c2ee66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json, sys, pathlib\n",
+    "p = pathlib.Path(\"/srv/tmp/kyle/bhnerf/tutorials/naive_ensemble_uncertainty.ipynb\")\n",
+    "nb = json.loads(p.read_text())\n",
+    "\n",
+    "for c in nb.get(\"cells\", []):\n",
+    "    c.pop(\"attachments\", None)\n",
+    "    for o in c.get(\"outputs\", []):\n",
+    "        if isinstance(o, dict) and \"data\" in o:\n",
+    "            for k in list(o[\"data\"].keys()):\n",
+    "                if k.startswith(\"image/\"):\n",
+    "                    del o[\"data\"][k]\n",
+    "    c[\"execution_count\"] = None\n",
+    "    c.get(\"metadata\", {}).pop(\"widgets\", None)\n",
+    "\n",
+    "for k in (\"widgets\", \"widget_state\", \"varInspector\", \"latex_envs\"):\n",
+    "    nb.get(\"metadata\", {}).pop(k, None)\n",
+    "\n",
+    "p.write_text(json.dumps(nb, ensure_ascii=False, separators=(\",\",\":\")))\n",
+    "print(\"Wrote cleaned notebook:\", p)"
+   ]
   }
  ],
  "metadata": {
